# msc-research-project

./: .gitignore  README.md  pyproject.toml
data/: dummy_eval.csv
data-cleaning/: check_references.py  fix_ids.py
scripts/: evaluate.py  evaluate_epochs.py  evaluate_zero_shot.py  evaluate_zeroshot_fashionclip.py  extract_images.py  infer_pdp.py  train.py  verify_data.py  verify_pdp.py
src/data/: dataset.py  transforms.py  triplet_dataset.py
src/engine/: trainer.py
src/model/: loss.py  modeling.py
src/utils/: metrics.py
